# Neargigs-smart-contract

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
